# gpt-image-studio

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  embed-test.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
companion/: README.md  package.json  tsconfig.json
companion/src/: accessKey.ts  credentials.test.ts  credentials.ts  main.ts  pairingState.test.ts  pairingState.ts  processManager.test.ts  processManager.ts  providerPresets.ts  securityConfig.test.ts  securityConfig.ts  server.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  analytics-event-logging-plan.md  architecture.md  backup-format.md  companion-doubao-plan.md  companion-provider-adapter-review.md  companion-providers-plan.md  companion.md  desktop-packaging.md  development-plan.md  generation-jobs.md  mask-editing-plan.md  mask-editing.md  next-feature-plan.md  phase1-test-checklist.md  pinia-migration-plan.md  product-roadmap.md  prompt-modes.md  refactor-plan.md  refactor-roadmap.md  responses-streaming-plan.md  roadmap.md  settings-batch-operations-plan.md  time-field-migration-notes.md
docs/archive/: README.md  generation-jobs.md  pinia-migration.md  (+1 more)
prompt-wordbanks/: adult-inspiration.txt  pose-creative.txt  pose-nsfw.txt  pose-safe.txt
src/: App.vue  main.ts  style.css
(+222 files in other folders)
