[package]
name = "gpt-image-studio"
version = "0.1.0"
description = "Local-first AI image creation workbench"
authors = ["honlnk"]
edition = "2021"
rust-version = "1.77.2"

# The desktop shell library is defined under [lib]; the binary entry just calls it.
[lib]
name = "gpt_image_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
